[package]
name = "factorio-benchmark-helper"
version = "0.1.6"
authors = ["mulark <mulark11@gmail.com>"]
edition = "2018"

[dependencies]
regex = "*"
directories = "*"
rust-ini = "*"
rusqlite = { version = "*", features = ["bundled"] }
lazy_static = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
reqwest = { version = "0.10", features = ["blocking", "json"]}
sha1 = "*"
sha2 = "*"
raw-cpuid = "*"
clap = "*"
bincode = "*"
percent-encoding = "2.*"
assert_cmd = "*"

[profile.release]
debug = 1
