[package]
name = "factorio-benchmark-helper"
version = "0.1.8"
authors = ["mulark <mulark11@gmail.com>"]
edition = "2018"

[dependencies]
regex = "*"
directories = "*"
rust-ini = "*"
rusqlite = { version = "*", features = ["bundled"] }
lazy_static = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
sha1 = "*"
sha2 = "*"
raw-cpuid = "*"
clap = "*"
bincode = "*"
percent-encoding = "2.*"
assert_cmd = "*"
ureq = {version = "1.2", features = ["json"]}
megabase_index_incrementer = {version = "*", git="https://github.com/technicalfactorio/technicalfactorio.git", default-features=false}
rust-lzma = "*"
tar = "*"
simplelog = "*"
log = "*"

[profile.release]
debug = 1
